[tool.poetry]
name = "bulkrax-lookup"
version = "0.1.0"
description = "Lookup Failures with Selenium"
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"
packages = [{include = "bulkrax_lookup"}]

[tool.poetry.dependencies]
python = "^3.11"
webdriver-manager = "^3.8.5"
mechanize = "^0.4.8"
requests = "^2.28.1"
requestium = "^0.1.15"
pyyaml = "^6.0"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
